--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -3,20 +3,39 @@
 {% block content %}
   <h1>
     {{ car.model }}
-    <a href="{% url 'taxi:car-delete' pk=car.id %}" class="btn btn-danger link-to-page">
+    
+  </h1>
+  <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
+  {% if user not in car.drivers.all %}
+    <form method="post">
+      {% csrf_token %}
+      <button class="btn btn-primary link-to-page" type="submit">Assign me to this car</button>
+    </form>
+  {% else %}
+    <form method="post">
+      {% csrf_token %}
+      <button class="btn btn-danger link-to-page" type="submit">Delete me from this car</button>
+    </form>
+  {% endif %}
+  <h1>Drivers</h1>
+  <hr>
+  <ul class="mb-5">
+    {% for driver in car.drivers.all %}
+      <li class="mb-3">Username: {{ driver.username }}
+          <hr>
+          Full name: {{ driver.first_name }} {{ driver.last_name }}
+          <hr>
+          License number: {{ driver.license_number }}
+      </li>
+    {% endfor %}
+  </ul>
+    <a href="{% url 'taxi:car-update' pk=car.id %}" class="btn btn-secondary">
+      Update
+    </a>
+  
+  <a href="{% url 'taxi:car-delete' pk=car.id %}" class="btn btn-danger">
       Delete
     </a>
 
-    <a href="{% url 'taxi:car-update' pk=car.id %}" class="btn btn-secondary link-to-page">
-      Update
-    </a>
-  </h1>
-  <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
-  <hr>
-  <ul>
-    {% for driver in car.drivers.all %}
-      <li>{{ driver.username }} ({{ driver.first_name }} {{ driver.last_name }})</li>
-    {% endfor %}
-  </ul>
+  
 {% endblock %}
