--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h1>Driver List
     </h1>
+    <a class="btn btn-primary mb-3" href="{% url 'taxi:driver-create' %}">Create</a>
 
     {% if driver_list %}
     <table class="table">
