--- a/templates/taxi/driver_confirm_delete.html
+++ b/templates/taxi/driver_confirm_delete.html
@@ -5,5 +5,6 @@
   <form action="" method="post">
     {% csrf_token %}
     <input type="submit" value="Yes" class="btn btn-danger">
+    <a class="btn btn-warning" href="{% url 'taxi:driver-detail' pk=driver.id %}">Cancel</a>
   </form>
 {% endblock %}
